# CentauriCarbon2

./: BUILD.md  Makefile  README.md  mcu_build.sh
debugfile/: printer.cfg  printer_dsp.cfg  product_test.cfg  temperature_sensors.cfg
elegoo/: CMakeLists.txt  build.sh  build_x64.sh  chipbase.cpp  chipbase.h  clocksync.cpp  clocksync.h  configfile.cpp  configfile.h  console.cpp  console.h  dsp_helper.h  extruder.cpp  extruder.h  gcode.cpp  gcode.h  gcode_move_transform.h  host_warpper.cpp  host_warpper.h  main.cpp  mathutil.cpp  mathutil.h  mcu.cpp  mcu.h  msgproto.cpp  msgproto.h  parsedump.cpp  pins.cpp  pins.h  printer.cpp  printer.h  reactor.cpp  reactor.h  serial.h  serial_bootloader.cpp  serial_bootloader.h  serialhdl.cpp  serialhdl.h  socket_client.cpp  socket_server.cpp  (+11 more)
elegoo/chelper/: CMakeLists.txt  c_helper.h  kin_cartesian.c  kin_cartesian.h  kin_corexy.c  kin_corexy.h  kin_extruder.c  kin_extruder.h  kin_shaper.h  msgblock.c  rpmsg.h  serialqueue.c  stepcompress.c  trapq.c  trapq.h  trdispatch.c  trdispatch.h
elegoo/common/: CMakeLists.txt  any.cpp  any.h  event_handler.cpp  event_handler.h  exception_handler.cpp  exception_handler.h  logger.cpp  logger.h  method.h  serialstudio.h  utilities.cpp  utilities.h
elegoo/extras/: CMakeLists.txt  adc_scaled.cpp  adc_scaled.h  adc_temperature.cpp  adc_temperature.h  adxl345.cpp  adxl345.h  auto_detect.cpp  auto_detect.h  bulk_sensor.cpp  bulk_sensor.h  bus.cpp  bus.h  buttons.cpp  buttons.h  canbus_ids.cpp  canbus_ids.h  canvas_dev.cpp  canvas_dev.h  cavity_fan.cpp  cavity_fan.h  cavity_temperature.cpp  cavity_temperature.h  controller_fan.cpp  controller_fan.h  cover_switch_sensor.cpp  cover_switch_sensor.h  error_mcu.cpp  error_mcu.h  exclude_object.cpp  exclude_object.h  extras_factory.cpp  extras_factory.h  extruder_stepper.cpp  extruder_stepper.h  fan.cpp  fan.h  fan_generic.cpp  fan_generic.h  filament_load_unload.cpp  (+103 more)
elegoo/extras/ai_camera/: CMakeLists.txt  main.cpp
elegoo/extras/ai_camera/module/: control.cpp  control.h
elegoo/extras/ai_camera/module/base/: camera_base.h
elegoo/extras/ai_camera/module/camera/: aiCamera_cmd.h  aiCamera_status.h  ai_camera.cpp  ai_camera.h  camera_uc03.h  time_lapse_photo.h  uvc_camera.cpp  uvc_camera.h  uvc_camera_without_uart.cpp  uvc_camera_without_uart.h  uvc_config_info.h  uvc_v4l2.cpp  uvc_v4l2.h  video_list.cpp  video_list.h
elegoo/extras/ai_camera/module/comm/: comm_protocol.cpp  comm_protocol.h  server_socket.cpp  server_socket.h
elegoo/extras/ai_camera/module/execption/: camera_execption.h
elegoo/extras/ai_camera/module/logs/: logs.cpp  logs.h
elegoo/extras/ai_camera/module/uart/: serial_info.h  uart.cpp  uart.h  uart_protocol.h
elegoo/extras/ai_camera/module/util/: ai_camera_pthread.cpp  ai_camera_pthread.h  common_tools.cpp  common_tools.h  crc16.c  crc16.h  kfifo.cpp  kfifo.h  obico_client.cpp  obico_client.h  store_time.cpp  store_time.h  time_lapse_control.cpp  time_lapse_control.h  video_encoder.cpp  video_encoder.h  video_format_convert.cpp  video_format_convert.h  video_info.cpp  video_info.h
elegoo/extras/ai_camera/module/video_stream/: rtc_streamer.cpp  rtc_streamer.h  rtsp_streamer.cpp  rtsp_streamer.h  video_streamer.cpp  video_streamer.h
elegoo/extras/ai_camera/test/: client_socket.cpp  rtm_communicator.cpp  rtm_communicator.h  rtm_example.cpp
elegoo/extras/bedmesh/: bed_mesh.h  hx71x.h  load_cell.h  load_cell_probe.h  probe.h  tap_analysis.h
elegoo/extras/display/: display.cpp  display.h
elegoo/kinematics/: CMakeLists.txt  cartesian.cpp  cartesian.h  corexy.cpp  corexy.h  corexz.cpp  corexz.h  delta.cpp  delta.h  deltesian.cpp  deltesian.h  hybrid_corexy.cpp  hybrid_corexy.h  hybrid_corexz.cpp  hybrid_corexz.h  idex_modes.cpp  idex_modes.h  kinematics.h  kinematics_factory.cpp  kinematics_factory.h  none.cpp  none.h  polar.cpp  polar.h  rotary_delta.cpp  rotary_delta.h  winch.cpp  winch.h
elegoo/lib/RtspSrc/inc/net/: RingBuffer.h  Socket.h
elegoo/lib/agora_sdk/include/: agora_rtc_api.h
elegoo/lib/ffmpeg/include/libavutil/: ffversion.h
elegoo/lib/ffmpeg/lib/: libavformat.so.62  libavutil.so.60
elegoo/lib/libco/include/: co_routine.h
elegoo/lib/libhv/include/hv/: herr.h
elegoo/lib/libjpeg/lib/: libjpeg.la  libjpeg.so.9
elegoo/lib/nlohmann/: json.h
elegoo/lib/signtools/decrypt/: decrypt
elegoo/lib/signtools/key/: aes_key.key  private_key.pem  public_key.pem
gcodefile/: EEB001_PLA_3DBenchy_34m24s.gcode  EEB001_PLA_3DBenchy_51m49s.gcode  EEB001_PLA_CC_MINI_2h3m.gcode  EEB001_PLA_The_Buddha_28m51s.gcode  EEB001_PLA_xyz_10m15s.gcode  EEB001_PLA_复活节兔_18m47s.gcode  EEB001_PLA_首层测试_21m7s.gcode  EEB001_PLA_龙dragon_25m37s.gcode  EN4Pro_0.4_Cube_PLA0.2_55m40s.gcode  fast-EEB001_PLA_3DBenchy_21m6s.gcode
ipkg-build/: elegoo-build.sh  ipkg-build.sh  nfs.sh  readme.md  run_printer.sh  update_ipk.sh
ipkg-build/source/control/: control  postinst  postrm  preinst  prerm
lib/gd32f30x/cmsis/: system_gd32f30x.c
lib/gd32f30x/cmsis/include/: gd32f30x.h
lib/gd32f30x/driver/inc/: gd32f30x_adc.h  gd32f30x_fwdgt.h  gd32f30x_gpio.h  gd32f30x_i2c.h  gd32f30x_rcu.h  gd32f30x_spi.h  gd32f30x_timer.h  gd32f30x_usart.h
lib/gd32f30x/driver/src/: gd32f30x_gpio.c  gd32f30x_timer.c
lib/same54/include/component/: sdhc.h
lib/stm32f1/include/: stm32f103x6.h
lib/stm32f4/: system_stm32f4xx.c
lib/stm32f4/include/: stm32f401xe.h
src/: Kconfig  Makefile  basecmd.c  basecmd.h  bootloader.c  bootloader.h  bootloader_com.c  bootloader_com.h  command.h  debug.h  load_cell_endstop.c  por.c  ringbuffer.h  sched.c  sched.h  sensor_cs123x.c  sensor_lis2dw.c  sos_filter.h  stepper.c  tmcuart.c  trsync.c  version.h
src/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
src/generic/: armcm_boot.c  armcm_link.lds.S  armcm_reset.c  armcm_timer.c  misc.h  serial_irq.c
src/stm32/: Kconfig  Makefile  adc.c  flash.c  flash.h  gd32f30x.c  i2c.c  internal.h  serial.c  spi.c  stm32f1.c  stm32f4.c  watchdog.c
